@@ -3,9 +3,17 @@
 
 import os
 
-from trytond.tests.test_tryton import load_doc_tests
+from trytond.tests.test_tryton import TEST_NETWORK, load_doc_tests
 
-if (os.getenv('STRIPE_SECRET_KEY')
-        and os.getenv('STRIPE_PUBLISHABLE_KEY')):
-    def load_tests(*args, **kwargs):
-        return load_doc_tests(__name__, __file__, *args, **kwargs)
+
+def load_tests(*args, **kwargs):
+    if (not TEST_NETWORK
+            or not (os.getenv('STRIPE_SECRET_KEY')
+                and os.getenv('STRIPE_PUBLISHABLE_KEY'))):
+        kwargs.setdefault('skips', set()).update({
+                'scenario_account_payment_stripe.rst',
+                'scenario_account_payment_stripe_dispute.rst',
+                'scenario_account_payment_stripe_identical.rst',
+                'scenario_account_payment_stripe_intent.rst',
+                })
+    return load_doc_tests(__name__, __file__, *args, **kwargs)
