@@ -1,3 +1,4 @@
+* Add option to skip tests that require network
 * Add language support per field in export data
 * Add translated descriptor for Char and Text fields
 * Include row and column in error message when importing data
